<?php

namespace GrowthCode\DesignPatterns\Behavioral\Strategy;

interface BattleStrategy
{
    public function execute(): string;
}
